Agrega un lorem ipsum

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <main>  
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consequatur temporibus quia totam praesentium quam facere tenetur laudantium fugit excepturi ad illo illum aut sit, asperiores soluta fuga suscipit. Odio.
+    </main>
     
 </body>
 </html>
